# vgi-xgboost

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  conftest.py  docker-entrypoint.sh  fly.toml  pyproject.toml  serve.py  xgboost_worker.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml
test/sql/: xgboost_categorical.test  xgboost_datasets.test  xgboost_importance.test  xgboost_models.test  xgboost_search.test  xgboost_typed_fit.test  xgboost_validation.test
tests/: harness.py  sqllogic.py  test_datasets.py  test_features.py  test_importance.py  test_models.py  test_sql_haybarn.py  test_typed_and_search.py
vgi_xgboost/: __init__.py  buffering.py  datasets.py  features.py  importance.py  models.py  registry.py  schema_utils.py  search.py  typed_models.py
