[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vgi-xgboost"
version = "0.1.0"
description = "A VGI worker exposing XGBoost (train/predict registry + interpretation) to DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vgi-python[http,oauth]>=0.8.5",
    "vgi-rpc[sentry]>=0.20.4",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "haybarn"]

[tool.setuptools]
packages = ["vgi_xgboost"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["vgi_xgboost", "xgboost_worker.py", "serve.py"]

[tool.vgi-lint-check.per_object]
# VGI901/902 (--execute only) run each example's SQL live. These functions read a
# *stored* model at bind time, so their single-statement illustrative examples
# cannot bind in a fresh session (no model exists yet) — the fit->predict workflow
# is demonstrated in the catalog's vgi.executable_examples instead. This is a
# surgical, documented exception scoped to exactly the model-dependent functions;
# every other example binds and runs on real/inline data.
"xgboost.main.predict" = { ignore = ["VGI901", "VGI902"] }
"xgboost.main.explain" = { ignore = ["VGI901", "VGI902"] }
"xgboost.main.feature_importance" = { ignore = ["VGI901", "VGI902"] }
"xgboost.main.permutation_importance" = { ignore = ["VGI901", "VGI902"] }
"xgboost.main.partial_dependence" = { ignore = ["VGI901", "VGI902"] }
